--- a/webpage/client/src/pages/Style.css
+++ b/webpage/client/src/pages/Style.css
@@ -1,5 +1,6 @@
 *, *::before, *::after {
   box-sizing: border-box;
+
 }
 
 
@@ -27,4 +28,47 @@
 }
 @page {
   margin: 1in;
+}
+
+.center-div {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 20px;
+
+
+}
+
+.leftside,
+.rightside {
+  height: 115vh;
+  width: 50%;
+  font-size: 16px;
+  padding: 10px 20px;
+  box-sizing: border-box;
+  display: inline-block;
+
+}
+
+.leftside {
+  border: 1px solid black;
+  overflow: auto;
+}
+
+.rightside {
+  color: black;
+  width: 595px;
+  height: 842px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  padding: 0px 20px;
+  background-color: white;
+}
+.MuiFormHelperText-root {
+  color: white !important;
+}
+.MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
+    border-color: white;
+}
+.MuiInputLabel-root {
+  color: white !important;
 }
