--- a/webpage/client/src/pages/Dashboard.css
+++ b/webpage/client/src/pages/Dashboard.css
@@ -1,6 +1,8 @@
+
 .dashboard {
     width: 90%;
     margin: 0 auto;
+    padding: 20px;
   }
   
   .document-grid {
@@ -8,22 +10,79 @@
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
   }
-  
-  .document-card {
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 20px;
-    box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.1);
+
+  .dashboard .card-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+    margin-bottom: 20px;
   }
+
   
-  .document-card h2 {
-    margin-top: 0;
-  }
-  
-  .document-card p {
+.ant-card p {
+
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 3; /* number of lines to show */
     -webkit-box-orient: vertical;
+      line-height: 1.4; /* adjust line height as needed */
+      margin-bottom: 12px; /* add spacing between paragraphs */
   }
+
+  .upload-container {
+      display: flex;
+      align-items: center;
+      margin-bottom: 20px;
+    }
+
+  .document-actions {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 10px;
+  }
+
+  .document-actions button {
+    margin-left: 10px;
+    color: #767676;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+  }
+
+  .document-actions button:hover {
+    color: #000;
+  }
+
+  .document-actions button:focus {
+    outline: none;
+  }
+
+  .ant-card {
+    flex: 1 0 200px;
+    border: 2px solid #000;
+    border-radius: 10px;
+    box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.1);
+  }
+
+  .ant-card-head {
+    border-bottom: 2px solid #000;
+   }
+
+   .ant-card-body {
+     border-top: 2px solid #000;
+   }
+
+   h1 {
+       color: black;
+       font-weight: normal;
+       margin-bottom: 20px;
+       justify-content: center;
+   }
+
+
+
+
+
+
+
