--- a/webpage/client/src/pages/Style.css
+++ b/webpage/client/src/pages/Style.css
@@ -11,6 +11,7 @@
     margin: 20px;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, .5);
     background-color: white;
+    color: black;
 }
 .container .ql-container.ql-snow {
     border: none;
@@ -94,6 +95,7 @@ textarea:focus {
   	border-radius: 10px;
   	padding: 5px;
   	margin-bottom: 1.5em;
+  	margin-top: 5px;
 }
 
 
@@ -101,6 +103,7 @@ textarea:focus {
 	border: none;
 	background-color: rgb(233, 233, 233);
 	width: 100%;
+
 }
 
 .SearchStickyNote input:focus {
@@ -148,10 +151,13 @@ textarea:focus {
 .leftside {
   border: 1px solid black;
   overflow: auto;
+  background-color: white;
+  height: 842px;
 }
 
 .rightside {
   color: black;
+  border: 1px solid black;
   width: 595px;
   height: 842px;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
@@ -167,3 +173,12 @@ textarea:focus {
 .MuiInputLabel-root {
   color: white !important;
 }
+
+.richtext-drawer-header {
+  height: 103px;
+}
+
+.markdown-drawer-header {
+  height: 103px;
+}
+
