--- a/webpage/client/src/pages/Style.css
+++ b/webpage/client/src/pages/Style.css
@@ -35,6 +35,7 @@
 	padding-right: 15px;
 	padding-left: 15px;
 	min-height: 100vh;
+	overflow: hidden;
 
 }
 .StickyNoteList {
@@ -54,6 +55,9 @@
   	flex-direction: column;
   	justify-content: space-between;
   	white-space: pre-wrap;
+    word-wrap: break-word;
+    white-space: normal;
+
 }
 
 .StickyNote-footer {
