--- a/webpage/client/src/pages/Style.css
+++ b/webpage/client/src/pages/Style.css
@@ -5,7 +5,7 @@
 
 .container {
   width: 210mm;
-  height: 297mm;
+  height: 13in;
   margin: 0 auto;
   background-color: white;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -299,4 +299,129 @@ textarea:focus {
 
 .replies {
   margin-top: 20px;
+}
+
+.chat {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+}
+
+.chat-main {
+  height: 100%;
+  flex: 0.8;
+  padding: 50px;
+
+}
+
+.chat-sidebar {
+  height: 100%;
+  background-color: #f9f5eb;
+  flex: 0.2;
+  padding: 50px;
+  border-right: 1px solid #fdfdfd;
+  color: black;
+}
+
+
+.chat-header {
+  margin: 30px 0 10px 0;
+  color: black;
+}
+
+.chat-mainHeader {
+  width: 100%;
+  height: 10vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: #f9f5eb;
+  color: black;
+}
+
+.message-container {
+  width: 100%;
+  height: 80vh;
+  background-color: #fff;
+  padding: 20px;
+  overflow-y: scroll;
+}
+
+.message-container > * {
+  margin-bottom: 10px;
+}
+
+.message {
+  width: 80%;
+  height: 100%;
+  border-radius: 10px;
+  border: 1px solid #ddd;
+  outline: none;
+  padding: 15px;
+}
+
+.message-sender {
+  background-color: rgb(194, 243, 194);
+  max-width: 300px;
+  padding: 10px;
+  border-radius: 10px;
+  margin-left: auto;
+  font-size: 15px;
+}
+
+.message-sender > p {
+  color: black;
+}
+.message-chats > p {
+  color: black;
+  font-size: 13px;
+}
+.sender-name {
+  color: black;
+  text-align: right;
+}
+
+.message-recipient > p {
+  color: black;
+  background-color: #f5ccc2;
+  width: 300px;
+  padding: 10px;
+  border-radius: 10px;
+  font-size: 15px;
+}
+.message-status {
+
+  bottom: 50px;
+  font-size: 13px;
+  font-style: italic;
+  color: black;
+}
+
+.chat-footer {
+  padding: 10px;
+  background-color: #f9f5eb;
+  height: 10vh;
+}
+
+.chat-form {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.sendBtn {
+  width: 150px;
+  background-color: green;
+  padding: 10px;
+  border: none;
+  outline: none;
+  color: #eae3d2;
+  cursor: pointer;
+}
+.sendBtn:hover {
+  background-color: rgb(129, 201, 129);
 }
