--- a/webpage/client/src/App.css
+++ b/webpage/client/src/App.css
@@ -57,6 +57,35 @@ body {
   pointer-events: none;
 }
 
+.textarea-latex {
+  width: 60%;
+  height: 70vh;
+  margin: 5% auto;
+  padding: 20px;
+  background-color: white;
+  color: black;
+  border-radius: 5px;
+}
+
+.editor-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  height: 80vh;
+  padding: 20px;
+}
+
+.latex-preview {
+  width: 45%;
+  height: 100%;
+  padding: 20px;
+  background-color: white;
+  color: black;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  overflow: auto;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
