--- a/webpage/client/src/pages/Dashboard.css
+++ b/webpage/client/src/pages/Dashboard.css
@@ -15,7 +15,10 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
-    margin-bottom: 20px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    border-bottom: solid;
+    padding-bottom: 20px;
   }
 
   
